# chatom

./: .copier-answers.yaml  .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: build.yaml  docs.yaml  e2e_slack.yaml
chatom/: __init__.py  attachment.py  backend.py  backend_registry.py  channel.py  enums.py  handlers.py  mention.py  message.py  user.py
chatom/agent/: __init__.py  toolset.py
chatom/backend/: __init__.py  backend.py  backend_config.py  backend_registry.py
chatom/base/: __init__.py  attachment.py  authorization.py  base.py  capabilities.py  channel.py  connection.py  conversion.py  embed.py  mention.py  message.py  presence.py  reaction.py  testing.py  thread.py  user.py
chatom/csp/: __init__.py  adapter.py  nodes.py
chatom/discord/: __init__.py  backend.py  channel.py  config.py  mention.py  message.py  presence.py  testing.py  user.py
chatom/email/: __init__.py  backend.py  config.py  mention.py  message.py  presence.py  testing.py  user.py
chatom/examples/: basic_connection.py  cross_platform_bot.py  direct_messages.py  formatted_messages.py  listen_for_messages.py  mentions_and_reactions.py  message_history.py  send_message.py  threads_and_replies.py
chatom/format/: __init__.py  attachment.py  components.py  embed.py  message.py  parse.py  table.py  telegram.py  text.py  variant.py
chatom/format/spec/: __init__.py  symphony.py
chatom/irc/: __init__.py  backend.py  config.py  mention.py  message.py  presence.py  testing.py  user.py
chatom/matrix/: __init__.py  backend.py  channel.py  config.py  mention.py  message.py  presence.py  testing.py  user.py
chatom/mcp/: cli.py  server.py
chatom/mcp/config/: config.yaml
chatom/slack/: __init__.py  backend.py  channel.py  config.py  mention.py  message.py  presence.py  testing.py  user.py
chatom/symphony/: __init__.py  backend.py  channel.py  config.py  mention.py  message.py  presence.py  testing.py  user.py
chatom/telegram/: backend.py  message.py  testing.py
chatom/tests/: combined_e2e.py  discord_e2e.py  slack_e2e.py  symphony_e2e.py  test_access_policy.py  test_agent.py  test_all.py  test_backend.py  test_backend_registry.py  test_backends.py  test_base_models.py  test_bot_features.py  test_config.py  test_connection.py  test_conversion.py  test_csp.py  test_discord_channel_conversion.py  test_email_irc_messages.py  test_enums.py  test_format.py  test_incoming_attachments.py  test_interactions.py  test_matrix.py  test_mcp.py  test_mention.py  test_message_conversion.py  test_mock_backends.py  test_symphony_fetch_messages.py  test_symphony_messageml_compliance.py
chatom/tests/conversion/: test_message_conversion.py  test_message_conversion_cross.py  test_message_conversion_discord.py  test_message_conversion_slack.py  test_message_conversion_symphony.py  test_telegram_html.py
chatom/tests/integration/: __init__.py  combined_e2e.py  discord_e2e.py  slack_e2e.py  symphony_e2e.py  test_symphony_integration.py  test_telegram_integration.py
chatom/tests/integration/e2e/: discord.py  slack.py  symphony.py
docs/src/: advanced-features.md  api.md  backend-examples.md  backends.md  base-models.md  conversion.md  csp-integration.md  format-system.md  installation.md  integration-testing.md  mentions.md  messaging.md  quickstart.md
