[build-system]
requires = ["hatchling"]
build-backend="hatchling.build"

[project]
name = "chatom"
authors = [{name = "the chatom authors", email = "dev@1kbgz.com"}]
description = "Minimum viable chat components"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.10"
keywords = [
    "chat",
    "chatbot",
    "messenger",
    "discord",
    "slack",
    "irc",
    "matrix",
    "whatsapp",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pydantic>=2",
    "singledispatch",
]

[project.optional-dependencies]
develop = [
    "build",
    "bump-my-version",
    "check-manifest",
    "codespell>=2.4,<2.5",
    "hatchling",
    "mdformat>=0.7.22,<1.1",
    "mdformat-tables>=1",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff>=0.9,<0.15",
    "twine",
    "uv",
    "wheel",
]

[project.scripts]

[project.entry-points."chatom.backends"]
discord = "chatom.discord.backend:DiscordBackend"
slack = "chatom.slack.backend:SlackBackend"
symphony = "chatom.symphony.backend:SymphonyBackend"
matrix = "chatom.matrix.backend:MatrixBackend"
irc = "chatom.irc.backend:IRCBackend"
email = "chatom.email.backend:EmailBackend"

[project.urls]
Repository = "https://github.com/1kbgz/chatom"
Homepage = "https://github.com/1kbgz/chatom"

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "chatom/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "Makefile",
    "docs/**/*",
    "TODO.md",
]

[tool.coverage.run]
branch = true
omit = [
    "chatom/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 80

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["chatom"]

[tool.hatch.build.targets.wheel]
packages = ["chatom"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.pytest.ini_options]
addopts = ["-vvv", "--junitxml=junit.xml"]
testpaths = "chatom/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = ["chatom"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.yardang]
pages = [
    "docs/src/index.md",
    "docs/src/installation.md",
    "docs/src/quickstart.md",
    "docs/src/base-models.md",
    "docs/src/messaging.md",
    "docs/src/mentions.md",
    "docs/src/format-system.md",
    "docs/src/advanced-features.md",
    "docs/src/conversion.md",
    "docs/src/backends.md",
    "docs/src/backend-examples.md",
    "docs/src/integration-testing.md",
    "docs/src/api.md",
]
